Adds pages and style test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 </head>
 <body>
 	<div class="main">
-		<div id="title">Richard Huynh</div>
+		<div class="page" id="title">
+			<div id="name">
+				Richard Huynh
+				<div id="subtitle">web dev padawan | game dev hobbyist</div>
+			</div>
+
+		</div>
+		<div class="page" id="about">
+			<img src="images/headshot.jpg" id="photo" alt="">
+			<p id="intro">
+				Hi!<br/>I'm a developer with an interest in building things on the web.
+			</p>
+		</div>
+		<div class="page" id="projects">
+			<div id="projects-header">Projects</div>
+		</div>
+		<div class="page" id="contact">
+			<div id="projects-header">Contact</div>
+		</div>
+	</div>
 </body>
 </html>
