Adds Github link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		</div>
 		<div class="page" id="contact">
 			<div id="projects-header">Contact</div>
+			<a href="https://github.com/huynhrichy">Github</a>
 		</div>
 	</div>
 </body>
