Grid for projects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/masonry.pkgd.min.js"></script>
 </head>
 <body>
 	<div class="main">
@@ -26,6 +27,15 @@
 		</div>
 		<div class="page" id="projects">
 			<div id="projects-header">Projects</div>
+			<div id="grid">
+				
+				<div class="project">zdfzd</div>
+				<div class="project">zdfzd</div>
+				<div class="project">zezezeez</div>
+				<div class="project">zezezeez</div>
+				<div class="project">zezezeez</div>
+				<div class="project">zezezeez</div>
+			</div>
 		</div>
 		<div class="page" id="contact">
 			<div id="projects-header">Contact</div>
