Removes grid, makes column for projects, changes colour scheme

--- a/index.html
+++ b/index.html
@@ -8,34 +8,51 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/masonry.pkgd.min.js"></script>
+	<!--<script src="js/masonry.pkgd.min.js"></script>-->
 </head>
 <body>
 	<div class="main">
 		<div class="page" id="title">
 			<div id="name">
 				Richard Huynh
-				<div id="subtitle">web dev padawan | game dev hobbyist</div>
+				<div id="subtitle">web dev padawan<!-- | game dev hobbyist --></div>
 			</div>
 
 		</div>
 		<div class="page" id="about">
 			<img src="images/headshot.jpg" id="photo" alt="">
 			<p id="intro">
-				Hi!<br/>I'm a developer with an interest in building things on the web.
+				Hi! I'm a developer learning how to build things on the web. Take a peek at some of what I've done!
 			</p>
 		</div>
 		<div class="page" id="projects">
 			<div id="projects-header">Projects</div>
+
+			<a href="#"><img class="project" src="images/hotorcold.png" alt=""></a>
+			<br/>
+			<a href="#"><img class="project" src="images/shoppinglist.png" alt=""></a>
+			<br/>
+			<a href="#"><img class="project" src="images/backgroundmusic.png" alt=""></a>
+			<br/>
+			<a href="#"><img class="project" src="images/country.png" alt=""></a>
+			<!--
+			<div class="project"></div>
+			<div class="project"></div>
+			<div class="project col-2"></div>
+			<div class="project col-2"></div>
+			-->
+
+			<!--
 			<div id="grid">
 				
 				<div class="project">zdfzd</div>
 				<div class="project">zdfzd</div>
 				<div class="project">zezezeez</div>
-				<div class="project">zezezeez</div>
-				<div class="project">zezezeez</div>
-				<div class="project">zezezeez</div>
+				<div class="project col-2" >zezezeez</div>
+				<div class="project col-2">zezezeez</div>
+				<div class="project col-2">zezezeez</div>
 			</div>
+			-->
 		</div>
 		<div class="page" id="contact">
 			<div id="projects-header">Contact</div>
