--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<div class="page" id="contact">
 			<div id="projects-header">Contact</div>
 			<a href="https://github.com/huynhrichy">Github</a>
+			<a href="https://www.linkedin.com/in/richardhuynhca">LinkedIn</a>
 		</div>
 	</div>
 </body>
