Links and images for projects and social networks

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 		<div class="page" id="about">
 			<img src="images/headshot.jpg" id="photo" alt="">
 			<p id="intro">
-				Hi! I'm a developer learning how to build things on the web. Take a peek at some of what I've done!
+				Hi! I'm a developer learning how to build things on the web. Take a peek at some of my work below!
 			</p>
 		</div>
 		<div class="page" id="projects">
 			<div id="projects-header">Projects</div>
-
-			<a href="#"><img class="project" src="images/hotorcold.png" alt=""></a>
+			
+			<a href="http://huynhrichy.github.io/hot-or-cold/"><img class="project" src="images/hotorcold.png" alt=""></a>
 			<br/>
-			<a href="#"><img class="project" src="images/shoppinglist.png" alt=""></a>
+			<a href="http://huynhrichy.github.io/shopping-list/"><img class="project" src="images/shoppinglist.png" alt=""></a>
 			<br/>
-			<a href="#"><img class="project" src="images/backgroundmusic.png" alt=""></a>
+			<a href="http://huynhrichy.github.io/background-music/"><img class="project" src="images/backgroundmusic.png" alt=""></a>
 			<br/>
-			<a href="#"><img class="project" src="images/country.png" alt=""></a>
+			<a href="http://huynhrichy.github.io/country-names-quiz/"><img class="project" src="images/country.png" alt=""></a>
 			<!--
 			<div class="project"></div>
 			<div class="project"></div>
@@ -56,8 +56,11 @@
 		</div>
 		<div class="page" id="contact">
 			<div id="projects-header">Contact</div>
-			<a href="https://github.com/huynhrichy">Github</a>
-			<a href="https://www.linkedin.com/in/richardhuynhca">LinkedIn</a>
+			<a href="mailto:richardhuynh@cmail.carleton.ca"><img class="contact" src="images/email.png" alt=""></a>
+			<br/>
+			<a href="https://github.com/huynhrichy"><img class="contact" src="images/github.gif" alt=""></a>
+			<br/>
+			<a href="https://www.linkedin.com/in/richardhuynhca"><img class="contact" src="images/linkedin.png" alt=""></a>
 		</div>
 	</div>
 </body>
