--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
-	<!--<script src="js/masonry.pkgd.min.js"></script>-->
 </head>
 <body>
 	<div class="main">
@@ -22,7 +21,7 @@
 		<div class="page" id="about">
 			<img src="images/headshot.jpg" id="photo" alt="">
 			<p id="intro">
-				Hi! I'm a developer learning how to build things on the web. Take a peek at some of my work below!
+				Hi! I'm a developer learning how to build things on the web. Check out some of my work below!
 			</p>
 		</div>
 		<div class="page" id="projects">
